# xtools

./: .gitignore  CMakeLists.txt
cmd/: CMakeLists.txt  checkfile.cc  xcat.c  xls.c
data/: config.json
include/: tracer.h
scripts/: install.sh  package.sh  xtools.desktop
tests/: CMakeLists.txt  rightly_json.cc
